<resources>
    <string name="app_name">Pop Movies</string>
    <string name="movie_name">Movie Name</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating :</string>
    <string name="action_settings">Settings</string>
    <string name="pref_most_popular">Most Popular</string>
    <string name="pref_highest_rated">Highest Rated</string>
    <string name="pref_sort_order_label">Sort Order</string>
    <string name="pref_sort_order_key">sortOrder</string>
    <string name="image_view">image</string>
    <string name="movie_details">Movie Details</string>
    <string name="plot_synopsis">Synopsis</string>
    <string name="favorite">Favorite Movies</string>
    <string name="author">Author</string>
    <string name="content">Content</string>
    <string name="internet_movie">Didn\'t see any movies?\nTrying refreshing by swiping down\nor\ncheck your internet connection</string>
    <string name="trailer">Trailers:</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="most_popular_movies">Most Popular Movies</string>
    <string name="no_reviews_text">This movie doesn\'t have any reviews yet !</string>
    <string name="no_trailers_text">Oops !\nThere are no trailers for this movie!</string>
    <string name="check_internet_connection">Please check your internet connection</string>
</resources>
