<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:content="com.delaroystudios.movieapp.DetailActivity"
        tools:showIn="@layout/activity_movie_detail"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="131dp"
            android:background="@drawable/shadow"
            android:id="@+id/movie_title"
            android:text="@string/movie_name"
            android:paddingStart="22dp"
            android:paddingEnd="22dp"
            android:paddingTop="35dp"
            android:paddingBottom="10dp"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="parent"/>

        <ImageView
            android:layout_width="130dp"
            android:layout_height="190dp"
            android:id="@+id/thumbnail_image_header"
            android:layout_marginStart="29dp"
            android:layout_marginTop="10dp"
            android:fitsSystemWindows="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image_view"
            app:layout_collapseMode="parallax"
            app:layout_constraintTop_toBottomOf="@id/movie_title"
            app:layout_constraintLeft_toRightOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/releasedate"
            android:padding="@dimen/padding_layout"
            android:text="@string/release_date"
            android:layout_marginTop="5dp"
            android:textSize="28sp"
            app:layout_constraintTop_toBottomOf="@id/movie_title"
            app:layout_constraintLeft_toRightOf="@id/thumbnail_image_header"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userrating"
            android:padding="@dimen/padding_layout"
            android:text="@string/rating"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/releasedate"
            app:layout_constraintLeft_toRightOf="@id/thumbnail_image_header"/>

        <com.github.ivbaranov.mfb.MaterialFavoriteButton
            android:id="@+id/favorite_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentRight="true"
            app:mfb_type="star"
            app:layout_constraintLeft_toRightOf="@id/thumbnail_image_header"
            app:layout_constraintTop_toBottomOf="@id/userrating"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/plot_synopsis"
            android:padding="@dimen/padding_layout"
            android:text="@string/plot_synopsis"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/thumbnail_image_header"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:text="@string/trailer"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/plot_synopsis"
            app:layout_constraintLeft_toRightOf="parent"
            android:id="@+id/trailer_text"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            app:layout_constraintTop_toBottomOf="@+id/trailer_text"
            app:layout_constraintLeft_toLeftOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
